2010-11-27  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSTableView
	header and view.
	* Source/NSTableView.m: Added call in to drawing methods in 
	GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.

2010-11-27  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSTableHeaderView
	drawTableHeaderRect:inView:.
	* Source/NSTableHeaderView.m: Added call in to drawing methods in 
	GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.

2010-11-27 Riccardo Mottola

       * Source/GSThemeDrawing.m:
       Revert color well thickness. If desired, this should go in a theme.

2010-11-27  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocument.m (-setPrintInfo:): Record old print info with
	the document's undo manager (if there is one) as in Cocoa.

2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSTableHeaderCell view.
	* Source/NSTableHeaderCell.m: Added call in 
	tableHeaderCellDrawingRectForBounds: to drawing methods in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.

2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added methods to draw NSSliderCell view.
	* Source/NSSliderCell.m: Added call in drawKnobInCell:... and 
	drawBarInside:.. to drawing methods in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.

2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSScrollView view.
	* Source/NSScrollView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>
